post working, admin link, csrf protect

--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -4,8 +4,8 @@
 {% block body %}
     <div id="allposts-page">
         <div class="createpost-div">
-            <form action="POST">
-            {% csrf_token %}
+            <form id="newpost-form">
+            
             {{ createform }}
             <input class="create-btn-form btn btn-primary" type="submit" value="Submit">            
             </form>
