--- a/project4/network/templates/network/layout.html
+++ b/project4/network/templates/network/layout.html
@@ -12,11 +12,13 @@
     <body>
         <nav id="main-navbar" class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">Network</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            
               <ul class="navbar-nav">
+                {% if request.user.is_superuser %}
+                <li class="nav-item">
+                    <a class="nav-link" href="http://127.0.0.1:8000/admin/">Admin</a>
+                </li>
+                {% endif %}  
                 {% if user.is_authenticated %}
                     <li class="nav-item">
                         <button id="user" class="unstyle-btn nav-link"><strong>{{ user.username }}</strong></button>
@@ -41,7 +43,7 @@
                     </li>
                 {% endif %}
               </ul>
-            </div>
+            
         </nav>
         
         <div class="body">
